README Gitlab fix
Former-commit-id: 7a2e1639687d3493c00290c1430107003c60e43b

--- a/ansible/fw.yml
+++ b/ansible/fw.yml
@@ -210,3 +210,17 @@
         name: l7sdntest
         state: import
         target: /home/vagrant/mysqlFiles/controller_db_dumb.sql
+
+# todo on seperate comapp server
+- name: Setup Ryu
+  become: true
+  hosts: sa2
+  tasks:
+
+    - name: install ryu
+      pip:
+        name:
+          - ryu
+          - flask
+          - PyJWT
+          - numpy
