--- a/ansible/master.yml
+++ b/ansible/master.yml
@@ -74,24 +74,29 @@
       apt:
         update_cache: yes
 
+
+# todo task "Setup l7sdntest" in roles oder mit playbook auslagern (nur diese)
+- name: Setup l7sdntest
+  become: true
+  hosts: masters
+  gather_facts: false
+
+  tasks:
+    - name: Update Apt Cache
+      become: true
+      apt:
+        update_cache: yes
+
     - name: Install OpenJDK Java Java 11
       become: yes
       apt:
-        name: "{{ item }}"
+        name: openjdk-11-jdk
         state: present
-      with_items:
-        openjdk-11-jdk
 
-    # todo only jar in roles auslagern
     - name: create directory l7sdntest jar
       file:
         path: /home/vagrant/l7sdntest
         state: directory
-
-    #- name: create directory l7sdntest bin
-      #file:
-        #path: /home/vagrant/l7sdntestBin
-        #state: directory
 
     - name: copy l7sdntest.jar
       copy:
@@ -99,17 +104,14 @@
         dest: /home/vagrant/l7sdntest
         mode: '0777'
 
-    #- name: copy l7sdntest bin
-      #copy:
-        #src: subtasks/l7sdntest/bin
-        #dest: /home/vagrant/l7sdntestBin
-        #mode: '0777'
+- name: Setup l7sdntest for Master
+  become: true
+  hosts: masters
+  gather_facts: false
 
-    - name: copyl7sdntest Configuration XML file
-      copy:
-        src: subtasks/l7sdntest/aTest
-        dest: /home/vagrant/l7sdntest
-        mode: '0777'
-
-
-
+  tasks:
+    - name: Copy all Config Files
+      copy: src=subtasks/l7sdntest/configs/{{ item }} dest=/home/vagrant/l7sdntest
+      with_items:
+        - Jonathan_MA_easy
+        - aTest
