--- a/ansible/client.yml
+++ b/ansible/client.yml
@@ -15,6 +15,9 @@
     - name: setup telegraf
       include_tasks: subtasks/telegraf_setup.yml
 
+    - name: Update, Upgrade, Reboot Client
+      include_tasks: subtasks/update.yml
+
 # todo client host
 - name: Setup l7sdntest
   become: true
@@ -37,11 +40,6 @@
       file:
         path: /home/vagrant/l7sdntest
         state: directory
-
-        #- name: create directory l7sdntest bin
-        #file:
-        #path: /home/vagrant/l7sdntestBin
-        #state: directory
 
     - name: copy l7sdntest.jar
       copy:
