--- a/ansible/subtasks/telegraf_setup.yml
+++ b/ansible/subtasks/telegraf_setup.yml
@@ -1,4 +1,5 @@
 - name: install telegraf
+  ignore_errors: yes # todo richtig machen!!
   apt:
     name: telegraf
     state: present
@@ -11,6 +12,7 @@
     option: interval
     value: '"1s"'
   register: telegraf_conf
+  ignore_errors: yes # todo
 
 - name: Set telegraf output adress
   ini_file:
@@ -19,14 +21,17 @@
     option: urls
     value: '["http://192.168.42.2:8086"]'
   register: telegraf_conf
+  ignore_errors: yes # todo
 
 - name: start telegraf
+  ignore_errors: yes # todo
   service:
     name: telegraf
     state: started
     enabled: yes
 
 - name: restart telegraf
+  ignore_errors: yes #todo
   service:
     name: telegraf
     state: restarted
